<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.raf.projekat1.jovan_babic_rn3018.activities.LoginActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_button">

        <ImageView
            android:id="@+id/login_dollar_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dollar"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_view"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/login_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/name_edit_text"/>

        <EditText
            android:id="@+id/login_surname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/surname_edit_text" />

        <EditText
            android:id="@+id/login_bank_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/bank_edit_text" />

        <EditText
            android:id="@+id/login_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/password_edit_text" />

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"
        android:text="@string/login_button_text" />

</androidx.constraintlayout.widget.ConstraintLayout>