<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.raf.projekat1.jovan_babic_rn3018.fragments.StateFragment">

    <TextView
        android:id="@+id/state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_top_text"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/income_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/income"
            android:textSize="30sp"
            android:textColor="@color/green"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/expense_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expense"
            android:textSize="30sp"
            android:textColor="@color/red"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/diff_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difference"
            android:textSize="30sp"
            android:textAlignment="center" />

    </LinearLayout>

</RelativeLayout>