<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="rs.raf.projekat1.jovan_babic_rn3018.fragments.AddFragment">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_add">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/add_income_expense_text"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>

        <Spinner
            android:id="@+id/add_spinner"
            android:layout_width="150dp"
            android:layout_gravity="left"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/income_expense_name"
            android:hint="@string/income_expense_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" />

        <EditText
            android:id="@+id/income_expense_amount"
            android:hint="@string/income_expense_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:inputType="number"/>

        <CheckBox
            android:id="@+id/audio_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Audio" />

        <ImageView
            android:id="@+id/mic_button_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_mic_none_24"
            android:layout_marginTop="30dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/mic_button_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_mic_24"
            android:layout_marginTop="30dp"
            android:visibility="gone"/>


        <EditText
            android:id="@+id/income_expense_description"
            android:hint="@string/income_expense_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:lines="4"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:scrollHorizontally="false"
            android:layout_marginTop="30dp" />


    </LinearLayout>

    <Button
        android:id="@+id/button_add"
        android:text="@string/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/top_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>