<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.raf.projekat1.jovan_babic_rn3018.activities.EditIncomeExpenseActivity">

    <LinearLayout
        android:id="@+id/edit_top_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_middle_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="@string/income_expense_info" />

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/ic_dollar_currency_symbol"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_middle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_top_layout"
        app:layout_constraintBottom_toTopOf="@id/edit_bottom_layout" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/income_expense_name_hint"
                android:textSize="25sp" />


            <EditText
                android:id="@+id/edit_income_expense_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/income_expense_amount"
                android:textSize="25sp" />


            <EditText
                android:id="@+id/edit_income_expense_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical" >


            <EditText
                android:id="@+id/edit_income_expense_description"
                android:hint="@string/income_expense_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:lines="6"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:scrollHorizontally="false"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp" />

            <ImageView
                android:id="@+id/mic_button_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_mic_none_24"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/mic_button_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_mic_24"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edit_middle_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/edit_income_expense_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_cancel"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/edit_income_expense_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_save"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>